--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -48,7 +48,7 @@
     <body class="page">
 
         <header class="header">
-            <a href="{{SITEURL}}"><h1 class="header__logo">Gik me</h1></a>
+            <h1 class="header__logo"><a href="{{SITEURL}}" class="header__logo-link">Gik me</a></h1>
             <nav class="header__menu">
                 {% if MENUITEMS %}
                     {% for item in MENUITEMS %}
