--- a/site/themes/gikme-light/src/stylus/article/article.styl
+++ b/site/themes/gikme-light/src/stylus/article/article.styl
@@ -40,7 +40,7 @@
 		margin 0
 		
 	&__tags
-		margin 10px 0 0 0
+		margin 10px 0 0 -10px
 		padding 0
 		list-style none
 		font-size 0
@@ -55,6 +55,15 @@
 			border 1px solid border-color
 			display inline-block
 			border-radius 20px
+			transition color 350ms, background-color 350ms, box-shadow 350ms
+			
+			&:hover
+				background-color border-color
+				transition color 0, background-color 0, box-shadow 0
+				
+			&:active
+				box-shadow 0 0 10px rgba(0,0,0,.2) inset
+				transition color 0, background-color 0, box-shadow 0
 			
 	&__learn-more
 		margin 10px 0
@@ -64,6 +73,15 @@
 			padding 10px 20px
 			border-radius 5px
 			border 1px solid border-color
+			transition color 350ms, background-color 350ms, box-shadow 350ms
+			
+			&:hover
+				background-color border-color
+				transition color 0, background-color 0, box-shadow 0
+				
+			&:active
+				box-shadow 0 0 10px rgba(0,0,0,.2) inset
+				transition color 0, background-color 0, box-shadow 0
 			
 	&__comments
 		display inline-block
