--- a/site/themes/gikme-light/src/stylus/header/header.styl
+++ b/site/themes/gikme-light/src/stylus/header/header.styl
@@ -7,12 +7,27 @@
 	&__logo
 		display inline-block
 		margin 0 20px 0 0 
-		background url('../img/sprite.png')
 		width 145px
 		height 50px
-		overflow hidden
-		text-indent -1000px
 		vertical-align middle
+		
+		&-link
+			background url('../img/sprite.png')
+			display inline-block
+			text-indent -1000px
+			overflow hidden
+			width 145px
+			height 50px
+			transition opacity 350ms
+
+			
+			&:hover
+				opacity .8
+				transition opacity 0
+				
+			&:active
+				opacity .5
+				transition opacity 0
 		
 	&__menu
 		display inline-block
