--- a/site/themes/gikme-light/src/stylus/pager/pager.styl
+++ b/site/themes/gikme-light/src/stylus/pager/pager.styl
@@ -9,3 +9,12 @@
 		margin-left 30px
 		border 1px solid border-color
 		border-radius 5px
+		transition color 350ms, background-color 350ms, box-shadow 350ms
+			
+		&:hover
+			background-color border-color
+			transition color 0, background-color 0, box-shadow 0
+			
+		&:active
+			box-shadow 0 0 10px rgba(0,0,0,.2) inset
+			transition color 0, background-color 0, box-shadow 0
