Fixed disqus comment link

--- a/site/themes/gikme-light/src/stylus/article/article.styl
+++ b/site/themes/gikme-light/src/stylus/article/article.styl
@@ -91,8 +91,9 @@
 		text-decoration none
 		color font-color
 		position relative
-		margin-left 40px
+		margin-left 20px
 		transition opacity 300ms
+		height 23px
 		
 		&:before
 			content ''
