--- a/site/themes/gikme-light/static/css/main.css
+++ b/site/themes/gikme-light/static/css/main.css
@@ -369,9 +369,10 @@ table {
   text-decoration: none;
   color: #3a3e41;
   position: relative;
-  margin-left: 40px;
+  margin-left: 20px;
   -webkit-transition: opacity 300ms;
           transition: opacity 300ms;
+  height: 23px;
 }
 .article__comments:before {
   content: '';
