--- a/site/themes/gikme-light/src/stylus/pager/pager.styl
+++ b/site/themes/gikme-light/src/stylus/pager/pager.styl
@@ -4,6 +4,17 @@
 	height 36px
 	line-height 36px
 	
+	@media screen and (max-width: 999px)
+		width 100%
+		max-width content-width
+
+	&__amount
+		@media screen and (max-width: 759px)
+			padding 0 0 0 30px
+			
+		@media screen and (max-width: 459px)
+			display block
+
 	&__link
 		padding 6px 20px
 		margin-left 30px
