--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -4,6 +4,7 @@
         {% block head %}
             <meta charset="utf-8">
             <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+            <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
             <link rel="stylesheet" href="{{ SITEURL }}/theme/css/fluidbox.css"/>
             <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css"/>
             <link rel="shortcut icon" href="/favicon.ico" />
