--- a/site/themes/gikme-light/src/stylus/header/header.styl
+++ b/site/themes/gikme-light/src/stylus/header/header.styl
@@ -15,6 +15,9 @@
 		height 50px
 		vertical-align middle
 		
+		@media screen and (max-width: 759px)
+			margin-left 30px
+		
 		&-link
 			background url('../img/sprite.png')
 			display inline-block
@@ -38,6 +41,7 @@
 		
 		@media screen and (max-width: 759px)
 			margin-top 20px
+			padding-left 20px
 		
 		&-item
 			@extend .link
