--- a/site/themes/gikme-light/src/stylus/article/article.styl
+++ b/site/themes/gikme-light/src/stylus/article/article.styl
@@ -26,6 +26,10 @@
 		margin-top 20px
 		line-height 1.5
 		
+		@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+			font-size 16px
+			line-height 1.3
+		
 		img
 			max-width 100%
 		
