--- a/site/themes/gikme-light/static/css/main.css
+++ b/site/themes/gikme-light/static/css/main.css
@@ -301,6 +301,12 @@ table {
   margin-top: 20px;
   line-height: 1.5;
 }
+@media screen and (-webkit-min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .article__content {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+}
 .article__content img {
   max-width: 100%;
 }
