Added indents to comments

--- a/site/themes/gikme-light/src/stylus/main.styl
+++ b/site/themes/gikme-light/src/stylus/main.styl
@@ -4,6 +4,7 @@
 @import 'link/link'
 
 @import 'article/article'
+@import 'comments/comments'
 @import 'container/container'
 @import 'content/content'
 @import 'footer/footer'
