add and hide recent comments widget

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -172,6 +172,12 @@
                 <div class="sidebar__item">
                     <div id="vk_groups"></div>
                 </div>
+                {# {% if DISQUS_SITENAME %}
+                <div class="sidebar__item">
+                    <h4 class="sidebar__title">Комментарии</h4>
+                    <script type="text/javascript" src="http://{{DISQUS_SITENAME}}.disqus.com/recent_comments_widget.js"></script>
+                </div>
+                {% endif %} #}
                 <div class="sidebar__item">
                     Хостинг <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
                     и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>
