--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -202,6 +202,7 @@
         {% endif %}
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/jquery.min.js"></script>
         <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+        <script type="text/javascript" src="{{ SITEURL }}/theme/js/audiojs/audio.js"></script>
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/main.js"></script>
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/jquery.fluidbox.min.js"></script>
         {% include 'analytics.html' %}
