--- a/site/themes/gikme-light/templates/article_stub.html
+++ b/site/themes/gikme-light/templates/article_stub.html
@@ -1,5 +1,12 @@
 {% extends "article_template.html" %}
 {% block article_content %}
 {{ article.content }}
-{% include "player.html" %}
+{% if article.enclosure and article.mime.startswith('audio') %}
+<p>
+    <strong>Музыка:</strong> <a href="http://vk.com/bacc3" target="_blank">Василий Корчагин - Аляска</a>
+</p>
+<p>
+    <a href="{{article.enclosure}}">Скачать выпуск</a>
+</p>
+{% endif %}
 {% endblock %}
