Added filehosting ref link

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -179,8 +179,8 @@
                 </div>
                 {% endif %} #}
                 <div class="sidebar__item">
-                    Хостинг <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
-                    и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>
+                    Хостинг сайта: <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
+                    и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>, звука: <a href="http://order.hostlife.net/pl.php?19255" class="link" target="_blank">HostLife</a>.
                 </div>
             </aside>
         </div>
