--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -179,6 +179,9 @@
                 </div>
                 {% endif %} #}
                 <div class="sidebar__item">
+                    <a href="http://orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="{{ SITEURL }}/theme/img/orphus.gif" border="0" width="220" height="80" /></a>
+                </div>
+                <div class="sidebar__item">
                     Хостинг сайта: <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
                     и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>, звука: <a href="http://order.hostlife.net/pl.php?19255" class="link" target="_blank">HostLife</a>.
                 </div>
@@ -205,6 +208,7 @@
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/audiojs/audio.js"></script>
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/main.js"></script>
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/jquery.fluidbox.min.js"></script>
+        <script type="text/javascript" src="{{ SITEURL }}/theme/js/orphus.js"></script>
         {% include 'analytics.html' %}
     </body>
 </html>
