--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -144,28 +144,12 @@
                         </li>
                         <li class="sidebar__donate-item">
                             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                                <input
-                                    name="cmd"
-                                    type="hidden"
-                                    value="_s-xclick">
-                                <input
-                                    name="hosted_button_id"
-                                    type="hidden"
-                                    value="BMF83KQSRA29Q">
-                                <input
-                                    class="sidebar__paypal"
-                                    alt="PayPal — более безопасный и легкий способ оплаты через Интернет!"
-                                    border="0"
-                                    name="submit"
-                                    src="https://www.paypalobjects.com/ru_RU/RU/i/btn/btn_donateCC_LG.gif"
-                                    type="image">
-                                <img
-                                    alt=""
-                                    border="0"
-                                    height="1"
-                                    src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif"
-                                    width="1">
-                            </form>
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="8W2MSD39XUUBG">
+<input type="image" src="https://www.paypalobjects.com/ru_RU/RU/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — более безопасный и легкий способ оплаты через Интернет!">
+<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
+</form>
+
                         </li>
                     </ul>
                 </div>
