--- a/site/themes/gikme-light/templates/article_template.html
+++ b/site/themes/gikme-light/templates/article_template.html
@@ -18,7 +18,10 @@
 		{%- block article_content %}{% endblock -%}
 	</section>
 	<footer class="article__footer">
-		<p class="article__meta">опубликовано {{ article.date.strftime("%H:%M") }} {%- if article.category.name != "misc" -%} &nbsp;&middot;&nbsp;{{ article.category|cat_name }} {%- endif -%}</p>
+		<div class="article__meta">опубликовано {{ article.date.strftime("%H:%M") }} {%- if article.category.name != "misc" -%} &nbsp;&middot;&nbsp;{{ article.category|cat_name }} {%- endif -%}
+        {%- if show_shares %}
+            <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><span class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus,pinterest,odnoklassniki,moimir,surfingbird,evernote" data-yashareTheme="counter"{% if article.image %} data-yashareImage="{{SITEURL}}{{article.image}}"{% endif %}></span>
+        {% endif -%}</div>
 		{%- if article.tags -%}
 			<ul class="article__tags">
 		        {%- for t in article.tags -%}
