Prelude news unveil

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -94,7 +94,7 @@
                             <a href="http://feeds.feedburner.com/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_rss link">RSS подкаста</a>
                         </li>
                         <li class="sidebar__subscribe-item">
-                            <a href="http://feeds.feedburner.com/gikmeblog" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS c невошедшим</a>
+                            <a href="http://feeds.feedburner.com/gikmeblog" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS (всё подряд) <strong>[18+]</strong></a>
                         </li>
                         <li class="sidebar__subscribe-item">
                             <a href="http://podster.fm/user/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_podster link">gik.me на podster.ru</a>
@@ -169,12 +169,15 @@
                     Хостинг сайта: <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
                     и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>, звука: <a href="http://order.hostlife.net/pl.php?19255" class="link" target="_blank">HostLife</a>.
                 </div>
+                <div class="sidebar__item">
+                    <strong>18+</strong> &mdash; для людей старше 18 лет
+                </div>
             </aside>
         </div>
 
         <footer class="footer">
             <a href="http://feeds.feedburner.com/gikme" class="footer__link link">RSS подкаста</a>
-            <a href="http://feeds.feedburner.com/gikmeblog" class="footer__link link">RSS подкаста вместе с невошедшим</a>
+            <a href="http://feeds.feedburner.com/gikmeblog" class="footer__link link">RSS (всё подряд) <strong>[18+]</strong></a>
         </footer>
         {% if DISQUS_SITENAME %}
             <script type="text/javascript">
