--- a/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
+++ b/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
@@ -2,35 +2,35 @@
 	width sidebar-width
 	float left
 	margin-left marginx2
-	
+
 	@media screen and (max-width: 999px)
 		display none
-	
+
 	&__item
 		margin-top 40px
-		
+
 		&:first-child
 			margin-top 20px
-		
+
 	&__title
 		margin 0
 		font-size subheader-fs
-		
+
 	&__subscribe
 		list-style none
 		margin 0
 		padding 0
-		
+
 		&-item
 			margin-top 10px
-			
+
 		&-link
 			padding-left 40px
 			height 30px
 			line-height 30px
 			display inline-block
 			position relative
-			
+
 			&:before
 				content ''
 				width 30px
@@ -41,45 +41,49 @@
 				left 0
 				background url('../img/sprite.png')
 				transition opacity 300ms
-			
+				background-position -145px -60px
+
 			&:hover:before
 				opacity .8
 				transition opacity 0
-				
+
 			&:active:before
 				opacity .5
 				transition opacity 0
-				
+
 			&_rss:before
 				background-position -205px 0
-				
+
 			&_rss-extra:before
 				background-position -205px 0
-			
+
 			&_podster:before
 				background-position -295px 0
-			
+
 			&_podfm:before
 				background-position -205px -30px
-				
+
 			&_itunes:before
 				background-position -295px -30px
-				
+
 			&_pushbullet:before
 				background-position -235px 0
-	
+
+			&_gikyo:before
+				background-position -175px -60px
+
 	&__socials
 		padding 0
 		margin 10px 0 0 0
 		list-style 0
 		font-size 0
-		
+
 		&-item
 			width 30px
 			height 30px
 			margin 0 10px 12px 0
 			display inline-block
-			
+
 		&-link
 			display inline-block
 			background url('../img/sprite.png')
@@ -88,36 +92,37 @@
 			overflow hidden
 			text-indent -1000px
 			transition opacity 300ms
+			background-position -145px -60px
 
 			&:hover
 				opacity .8
 				transition opacity 0
-				
+
 			&:active
 				opacity .5
 				transition opacity 0
-				
+
 			&_vk
 				background-position -145px -30px
-				
-			&_tw 
+
+			&_tw
 				background-position -175px 0
-				
+
 			&_fb
 				background-position -265px -30px
-			
+
 			&_gp
 				background-position -265px 0
-				
+
 			&_tm
 				background-position -175px -30px
-			
+
 			&_yt
 				background-position -145px 0
-				
+
 			&_ig
 				background-position -235px -30px
-			
+
 	&__donate
 		margin 10px 0 0 0
 		padding 0
@@ -126,11 +131,11 @@
 	&__paypal
 		outline none
 		transition opacity 300ms
-		
+
 		&:hover
 			opacity .8
 			transition opacity 0
-			
+
 		&:active
 			opacity .5
 			transition opacity 0
