--- a/site/themes/gikme-light/templates/article_stub.html
+++ b/site/themes/gikme-light/templates/article_stub.html
@@ -2,11 +2,13 @@
 {% block article_content %}
 {{ article.content }}
 {% if article.enclosure and article.mime.startswith('audio') %}
+{% if article.category == 'podcast' %}
 <p>
     <strong>Музыка:</strong> <a href="http://vk.com/bacc3" target="_blank">Василий Корчагин - Аляска</a>
 </p>
+{% endif %}
 <p>
-    <a href="{{article.enclosure}}">Скачать выпуск</a>
+    <a href="{{article.enclosure}}">Скачать звук</a>
 </p>
 {% endif %}
 {% endblock %}
