--- a/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
+++ b/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
@@ -71,6 +71,9 @@
 
 			&_gikyo:before
 				background-position -175px -60px
+				
+			&_aoc:before
+				background-position -205px -60px
 
 	&__socials
 		padding 0
