--- a/site/themes/gikme-light/templates/article_template.html
+++ b/site/themes/gikme-light/templates/article_template.html
@@ -24,7 +24,7 @@
         {% endif -%}</div>
 		{%- if article.tags -%}
 			<ul class="article__tags">
-		        {%- for t in article.tags -%}
+		        {%- for t in article.tags|sort -%}
 			        <li class="article__tags-item">
 						<a href="{{ SITEURL }}/{{ t.url }}" class="article__tags-link link">{{ t }}</a>
 					</li>
