--- a/site/themes/gikme-light/templates/article_template.html
+++ b/site/themes/gikme-light/templates/article_template.html
@@ -20,9 +20,10 @@
 	<footer class="article__footer">
 		<div class="article__meta">опубликовано {{ article.date.strftime("%H:%M") }} {%- if article.category.name != "misc" -%} &nbsp;&middot;&nbsp;{{ article.category|cat_name }} {%- endif -%}
         {%- if show_shares %}
-            <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><span class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus,pinterest,odnoklassniki,moimir,surfingbird,evernote" data-yashareTheme="counter"{% if article.image %} data-yashareImage="{{SITEURL}}{{article.image}}"{% endif %}></span>
+            {# <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><span class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus,pinterest,odnoklassniki,moimir,surfingbird,evernote" data-yashareTheme="counter"{% if article.image %} data-yashareImage="{{SITEURL}}{{article.image}}"{% endif %}></span> #}
 
-            {#<script type="text/javascript">(function(w,doc) {
+
+            <script type="text/javascript">(function(w,doc) {
             if (!w.__utlWdgt ) {
                 w.__utlWdgt = true;
                 var d = doc, s = d.createElement('script'), g = 'getElementsByTagName';
@@ -32,7 +33,7 @@
                 h.appendChild(s);
             }})(window,document);
             </script>
-            <div data-share-size="20" data-like-text-enable="false" data-background-alpha="0.0" data-pid="1353474" data-mode="share" data-background-color="#ffffff" data-share-shape="rectangle" data-share-counter-size="12" data-icon-color="#ffffff" data-text-color="#000000" data-buttons-color="#ffffff" data-counter-background-color="#ffffff" data-share-counter-type="separate" data-orientation="horizontal" data-following-enable="true" data-follow-gp="+GikMe" data-sn-ids="vk.tw.fb.gp.tb.ps.ok.sb." data-follow-in="gikme" data-selection-enable="true" data-exclude-show-more="false" data-share-style="6" data-follow-vk="gikme" data-follow-tw="gikme" data-counter-background-alpha="1.0" data-top-button="true" data-follow-fb="137607762942824" class="uptolike-buttons" ></div>#}
+            <div data-share-size="20" data-like-text-enable="false" data-background-alpha="0.0" data-pid="1353474" data-mode="share" data-background-color="#ffffff" data-share-shape="rectangle" data-share-counter-size="12" data-icon-color="#ffffff" data-text-color="#000000" data-buttons-color="#ffffff" data-counter-background-color="#ffffff" data-share-counter-type="disable" data-orientation="horizontal" data-following-enable="true" data-follow-gp=" GikMe" data-sn-ids="vk.tw.fb.gp.tb.ok.sb." data-follow-in="gikme" data-selection-enable="true" data-exclude-show-more="false" data-share-style="1" data-follow-vk="gikme" data-follow-tw="gikme" data-counter-background-alpha="1.0" data-top-button="true" data-follow-fb="137607762942824" class="uptolike-buttons share" ></div>
         {% endif -%}</div>
 		{%- if article.tags -%}
 			<ul class="article__tags">
