--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -83,7 +83,7 @@
 
         <div class="container cf">
             <main class="content">
-
+                {% set show_shares = True %}
                 {%- block content -%}{%- endblock %}
 
             </main>
