--- a/site/themes/gikme-light/templates/index.html
+++ b/site/themes/gikme-light/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% set date = None %}
-{% set show_shares = False %}
+{% set show_shares = True %}
 {% for article in articles_page.object_list -%}
 {%   if date != article.date.date() %}
 {%     set first_article_of_day = True %}
@@ -10,6 +10,7 @@
 {%     set first_article_of_day = False %}
 {%   endif %}
 {%   set date = article.date.date() %}
+{%   set show_shares = False %}
 {%   include "article_intro.html" %}
 {% endfor %}
 {% include "pagination.html" %}
