--- a/site/themes/gikme-light/templates/article.html
+++ b/site/themes/gikme-light/templates/article.html
@@ -58,7 +58,7 @@
 {% set show_shares = True %}
 {% include "article_stub.html" %}
 
-{% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
+{% if not article.nocomment and DISQUS_SITENAME and SITEURL and article.status != "draft" %}
   <div class="comments" id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_shortname = '{{ DISQUS_SITENAME }}';
