--- a/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
+++ b/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
@@ -71,7 +71,7 @@
 
 			&_gikyo:before
 				background-position -175px -60px
-				
+
 			&_aoc:before
 				background-position -205px -60px
 
@@ -142,3 +142,10 @@
 		&:active
 			opacity .5
 			transition opacity 0
+
+	&__tags
+		text-align center
+
+		&-item
+			display inline
+			margin 0 10px
