--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -192,10 +192,10 @@
                 </div>
                 <div class="sidebar__item">
                     Хостинг сайта:
-                    <a href="https://github.com/" class="link" target="_blank">GitHub</a>
+                    <a href="https://github.com/" class="link" target="_blank">GitHub</a>,
                     {# <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
-                    и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>,
-                    звука: <a href="http://order.hostlife.net/pl.php?19255" class="link" target="_blank">HostLife</a>.#}
+                    и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>,#}
+                    звука: <a href="https://cp.smartape.ru/mancgi/partnerprogram?partner=20524&project=1" class="link" target="_blank">SmartApe</a>.
                 </div>
                 <div class="sidebar__item">
                     <strong>18+</strong> &mdash; для людей старше 18 лет
