--- a/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
+++ b/site/themes/gikme-light/src/stylus/sidebar/sidebar.styl
@@ -40,7 +40,7 @@
 				top 0
 				left 0
 				background url('../img/sprite.png')
-				transition opacity 0
+				transition opacity 0ms
 				background-position -145px -60px
 
 			&:hover:before
@@ -94,7 +94,7 @@
 			height 30px
 			overflow hidden
 			text-indent -1000px
-			transition opacity 0
+			transition opacity 0ms
 			background-position -145px -60px
 
 			&:hover
@@ -133,7 +133,7 @@
 
 	&__paypal
 		outline none
-		transition opacity 0
+		transition opacity 0ms
 
 		&:hover
 			opacity .8
