--- a/site/themes/gikme-light/src/stylus/vars.styl
+++ b/site/themes/gikme-light/src/stylus/vars.styl
@@ -10,6 +10,7 @@ link-active-color = #0a2c57
 meta-color = #a4a6a8
 font-color = #3a3e41
 border-color = #cccbc9
+support-color = #20791b
 
 header-fs = 24px
 subheader-fs = 18px
