--- a/site/themes/gikme-light/src/stylus/header/header.styl
+++ b/site/themes/gikme-light/src/stylus/header/header.styl
@@ -1,10 +1,11 @@
 .header
 	width site-width
 	margin auto
-	padding 20px 0 0 0
+	padding 20px 240px 0 0
 	font-size 0
 	
 	@media screen and (max-width: 999px)
+		padding-right 0
 		width 100%
 		max-width content-width
 	
@@ -39,6 +40,24 @@
 	&__menu
 		display inline-block
 		
+		&_right
+			float right
+			margin-top 8px
+			@media screen and (max-width: 999px) 
+				float none
+				margin-left 169px
+			@media screen and (max-width: 743px)
+				margin-left 0
+			.header__menu
+				&-item
+					margin 0 20px 0 0 
+					&:last-child
+						margin-right 0
+						
+					&_donate
+						@media screen and (max-width: 538px)
+							margin-top 10px
+		
 		@media screen and (max-width: 759px)
 			margin-top 20px
 			padding-left 20px
@@ -50,7 +69,39 @@
 			margin 0 5px
 			font-size content-fs
 			
+			&_talk
+				border 1px solid
+				border-radius 5px
+				transition 250ms
+				
+				&:hover
+					color #fff
+					background link-color
+					border-color link-color
+					transition 0ms
+				
+				&:active
+					box-shadow 0 0 10px rgba(0,0,0,0.2) inset
+					transition 0
+			
+			&_donate
+				color support-color
+				border 1px solid support-color
+				border-radius 5px
+				transition 250ms
+				
+				&:hover
+					color #fff
+					background support-color
+					border-color support-color
+					transition 0ms
+					
+				&:active
+					box-shadow 0 0 10px rgba(0,0,0,0.4) inset
+					transition 0
+
 			&_active
 				border 1px solid border-color
 				border-radius 5px
 				color font-color
+				
