--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -65,7 +65,7 @@
                     class="header__menu-item header__menu-item_talk">Обсудить новости</a>
                 <a
                     href="{{SITEURL}}/pages/donate.html"
-                    class="header__menu-item header__menu-item_donate {% if output_file == 'pages/donate.html' %} header__menu-item_active {% endif %}">Поддержать</a>    
+                    class="header__menu-item header__menu-item_donate {% if output_file == 'pages/donate.html' %} header__menu-item_active {% endif %}">Поддержать</a>
             </nav>
         </header>
 
@@ -156,9 +156,9 @@
                         <li class="sidebar__subscribe-item">
                             <a class="sidebar__subscribe-link link" href="http://ave.gik.me/" target="_blank">Аватарки</a>
                         </li>
-                        <li class="sidebar__subscribe-item">
+                        {# <li class="sidebar__subscribe-item">
                             <a class="sidebar__subscribe-link sidebar__subscribe-link_gikyo link" href="http://yo.gik.me/" target="_blank">Yo!</a>
-                        </li>
+                        </li> #}
                         <li class="sidebar__subscribe-item">
                             <a class="sidebar__subscribe-link sidebar__subscribe-link_aoc link" href="/pages/addict-or-creative.html">Норкоман или творец</a>
                         </li>
