--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -21,12 +21,11 @@
             {% if FEED_RSS %}
                 <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
             {% endif %} #}
-            {# {% if CATEGORY_FEED_ATOM and category %}
-                <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_ATOM|format(category.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed раздела &quot;{{category|cat_name}}&quot;" />
-            {% endif %} #}
             {% if CATEGORY_FEED_RSS and category %}
-                {% if category == 'podcast' %}
+                {% if category|safe == 'podcast' %}
                     <link href="http://feeds.feedburner.com/gikme" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
+                {% elif category|safe == 'nedocast' %}
+                    <link href="http://feeds.feedburner.com/nedocast" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
                 {% else %}
                     <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS|format(category.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
                 {% endif %}
@@ -82,6 +81,9 @@
                     <ul class="sidebar__subscribe">
                         <li class="sidebar__subscribe-item">
                             <a href="http://feeds.feedburner.com/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_rss link">RSS подкаста</a>
+                        </li>
+                        <li class="sidebar__subscribe-item">
+                            <a href="http://feeds.feedburner.com/nedocast" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS недокаста<sup>18+</sup></a>
                         </li>
                         <li class="sidebar__subscribe-item">
                             <a href="http://feeds.feedburner.com/gikmeblog" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS (всё подряд)<sup>18+</sup></a>
@@ -217,6 +219,7 @@
 
         <footer class="footer">
             <a href="http://feeds.feedburner.com/gikme" class="footer__link link">RSS подкаста <strong>[18+]</strong></a>
+            <a href="http://feeds.feedburner.com/nedocast" class="footer__link link">RSS недокаста <strong>[18+]</strong></a>
             <a href="http://feeds.feedburner.com/gikmeblog" class="footer__link link">RSS (всё подряд) <strong>[18+]</strong></a>
         </footer>
         {% if DISQUS_SITENAME %}
